cmake_minimum_required(VERSION 3.13)
project(learnC__)

set(CMAKE_CXX_STANDARD 14)
ADD_SUBDIRECTORY(day01)
ADD_SUBDIRECTORY(day02)
ADD_SUBDIRECTORY(day03)
ADD_SUBDIRECTORY(day04)
ADD_SUBDIRECTORY(day05)
ADD_SUBDIRECTORY(day06)
ADD_SUBDIRECTORY(day07)
ADD_SUBDIRECTORY(day08)
ADD_SUBDIRECTORY(day09)
ADD_SUBDIRECTORY(day10)
ADD_SUBDIRECTORY(day11)
ADD_SUBDIRECTORY(day12)
ADD_SUBDIRECTORY(day13)
ADD_SUBDIRECTORY(day14)
ADD_SUBDIRECTORY(day15)
ADD_SUBDIRECTORY(day16)
ADD_SUBDIRECTORY(day17)
ADD_SUBDIRECTORY(day18)
ADD_SUBDIRECTORY(day19)
ADD_SUBDIRECTORY(day20)
ADD_SUBDIRECTORY(day21)