cmake_minimum_required(VERSION 3.13)
project(learnC__)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
add_executable(a test1.cpp)
add_executable(b test2.cpp)
add_executable(c test3.cpp)
add_executable(d test4.cpp)
add_executable(e test5.cpp)
add_executable(f test6.cpp)
add_executable(g test7.cpp)
add_executable(h test8.cpp)
add_executable(j test9.cpp)